[WinCairo][MediaFoundation] Video size is not always set. https://bugs.webkit.org/show_bug.cgi?id=156020

Reviewed by Darin Adler.

Getting the video display control object from the media session might fail the first time.
In case it fails, we should try again when setting the video size.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::setSize):
(WebCore::MediaPlayerPrivateMediaFoundation::getVideoDisplay):
(WebCore::MediaPlayerPrivateMediaFoundation::onTopologySet):
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:


Canonical link: https://commits.webkit.org/174146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198848 268f45cc-cd09-0410-ab3c-d52691b4dbfc